--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -16,6 +13,7 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-
-# Go workspace file
+bin/
 go.work
+/.idea/
+/.vscode/
